--- a/pages/productLine/productLine.wxml
+++ b/pages/productLine/productLine.wxml
@@ -1,11 +1,21 @@
 <!--index.wxml-->
-	<!-- 侧导航 -->
+<!-- 侧导航 -->
+<view class="index-flex">
 	<view>
-		<view>
-			<view wx:for="{{sideBarList}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
-				{{item.name}}
-			</view>
-		</view>
-		<view>
+		<view wx:for="{{sideBarList}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
+			{{item.name}}
 		</view>
 	</view>
+	<view>
+		<view class="sideBar-content">
+			<text>主机事业部</text>
+			<text>这是主机事业部1简介这是主机事业部 1简介这是主机事业部1简介</text>
+			<view>
+				<image></image>
+				<image></image>
+				<image></image>
+				<image></image>
+			</view>
+		</view>
+	</view>
+</view>
