--- a/pages/legaladvice/legaladvice.wxml
+++ b/pages/legaladvice/legaladvice.wxml
@@ -2,8 +2,8 @@
 <view class="index-center index-flex index-margin" style="padding:30rpx 0 ;">
 	<view class="index-news-icon"></view>
 	<view style="">
-		<view class="legaladvice-h1">广胜机电13800001111</view>
-		<view class=" legaladvice-h2">1分钟前</view>
+		<view class="legaladvice-h1">AVC律师事务所</view>
+		<view class=" legaladvice-h2">联系电话：18911110000</view>
 	</view>
 </view>
 
