--- a/pages/purchase/purchase.wxml
+++ b/pages/purchase/purchase.wxml
@@ -9,79 +9,34 @@
 		</block>
 	</swiper>
 	<!-- 搜索 -->
+	<view class=" index-white" style="padding:20rpx 0;">
+		<view class="index-search ">
+			<image class="index-search-left" src="./../../image/searchs.png"></image>
+			<input placeholder="搜索">
 
-	<view class="index-search">
-		<image class="index-search-left" src="./../../image/searchs.png"></image>
-		<input placeholder="搜索">
-
-		</input>
-		<image class="index-search-right" src="./../../image/search.png"></image>
+			</input>
+			<image class="index-search-right" src="./../../image/search.png"></image>
+		</view>
 	</view>
-
 	<!-- 列表 -->
-	<view class="index-list index-flex">
-		<view class="index-list-view" wx:for="{{list}}" wx:key="*this">
-			<view class="index-flex index-center index-list-icon">
-				<image mode="scaleToFill" src="{{item.src}}"></image>
+	<view class="index-white">
+		<view class="index-list index-flex  ">
+			<view class="index-list-view" wx:for="{{list}}" data-index="{{index}}" wx:key="*this" bindtap="jumpTo">
+				<view class="index-flex index-center index-list-icon">
+					<image mode="scaleToFill" src="{{item.src}}"></image>
+				</view>
+				<view class="index-list-text">{{item.title}}</view>
 			</view>
-			<view class="index-list-text">{{item.title}}</view>
 		</view>
 	</view>
-	<view class="index-bk"></view>
 	<!-- 统计 -->
-	<view class="index-statistics">
-		<view class="index-statistics-header index-flex index-center">
-			<image mode="scaleToFill" src="../../image/Statistics.png"></image>
-			<view>浏览统计</view>
-		</view>
-		<view class="index-statistics-bottom index-flex">
-			<view class="index-statistics-view index-statistics-border">
-				<view class="index-statistics-h1">1089</view>
-				<view class="index-statistics-h2">今日浏览数</view>
-			</view>
-			<view class="index-statistics-view">
-				<view class="index-statistics-h3">12390</view>
-				<view class="index-statistics-h2">总浏览数</view>
-			</view>
-		</view>
-	</view>
-	<view class="index-bk"></view>
-	<view>
-		<view class="index-statistics-header index-flex index-center">
-			<image mode="scaleToFill" src="./../../image/news.png"></image>
-			<view>最新消息</view>
-		</view>
-		<view class="index-news" wx:for="{{[1,2,3,4]}}" wx:key="*this">
-			<view class="index-news-top index-center index-flex">
-				<view class="index-news-icon"></view>
-				<view style="">
-					<view class="index-news-h1">广胜机电13800001111</view>
-					<view class="index-news-h2">1分钟前</view>
-				</view>
-				<image mode="scaleToFill" class="index-news-image" src="./../../image/dial.png"></image>
-			</view>
-			<view class="index-news-h3">
-				机翼型叶轮，防爆风机，最大30号，最小2号，角度可以调整，风量风压随时改变，手机微信同步：13800001111
-			</view>
-			<view class="index-news-content index-center index-flex">
-				<image mode="scaleToFill" src="./../../image/add.png"></image>
-				<image mode="scaleToFill" class="index-news-left" src="./../../image/add.png"></image>
-				<image mode="scaleToFill" class="index-news-left" src="./../../image/add.png"></image>
-			</view>
-			<view class="index-news-footer  index-flex">
-				<view class="index-news-h4">浏览次数1115次</view>
-				<view class="index-flex index-center">
-					<view class="index-flex index-center">
-						<image mode="scaleToFill" src="./../../image/Fabulous.png"></image>
-						<view class="index-news-h4">21</view>
-					</view>
-					<view class="index-flex index-center">
-						<image mode="scaleToFill" src="./../../image/Forward.png"></image>
-						<view class="index-news-h4">21</view>
-					</view>
-				</view>
-			</view>
-			<view class="index-bk"></view>
+	<view class="index-flex purchase-list">
+
+		<view class="purchase-list-view {{(index+1)%3!=0?'purchase-list-right':''}}" bindtap="jumpTolist" data-index="{{index}}" wx:for="{{[1,2,3,4,5,6]}}" wx:key="*this">
+			<image class="" src="../../image/caigou-bk.png"></image>
+			<view class="purchase-list-h2">大件搬运</view>
+			<view class="purchase-list-h3">￥669</view>
 		</view>
 	</view>
 </view>
+<tabbar tabbar="{{tabbar}}"></tabbar>
