--- a/pages/tool/tool.wxml
+++ b/pages/tool/tool.wxml
@@ -1,2 +1,112 @@
 <!--pages/tool/tool.wxml-->
-<text>pages/tool/tool.wxml</text>
+<view class="container tool">
+  <!-- 轮播 -->
+  <swiper class="swiper" autoplay="true" interval="5000">
+    <block wx:for="{{swiperData}}" wx:key="*this">
+      <swiper-item>
+        <image mode="scaleToFill" src="{{item.src}}"></image>
+      </swiper-item>
+    </block>
+  </swiper>
+  <!-- // 活动 -->
+  <view class="bulletin">
+    <view class="bulletin_left">
+      <text class="bulletin_left_word">活动</text>
+      <view class="bulletin_left_btn">公告</view>
+    </view>
+    <view class="bulletin_line"></view>
+    <view class="bulletin_right">
+      <view class="bulletin_right_view bulletin_right_marg">
+        <view class="bulletin_right_view_frame">家装</view>
+        <text class="bulletin_right_view_word">这是一个公告，关于装修的公告.这是一个公告，关于装修的公告</text>
+      </view>
+      <view class="bulletin_right_view bulletin_right_marg">
+        <view class="bulletin_right_view_frame">家装</view>
+        <text class="bulletin_right_view_word">这是一个公告，关于装修的公告.这是一个公告，关于装修的公告</text>
+      </view>
+    </view>
+  </view>
+  <!-- //系统 -->
+  <view class="tool_system">
+    <view class="index-statistics-header index-flex index-center" style="width:calc(100% - 60rpx);">
+      <image class="index-statistics-header-image" mode="scaleToFill" src="./../../image/system.png"></image>
+      <view>系统消息</view>
+    </view>
+    <view class="tool_system_ul" id="id=scroll-box">
+      <ul>
+        <li>
+          <view class="tool_system_ul_word">
+            <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+            <view class="tool_system_ul_time">2020-03-15</view>
+          </view>
+        </li>
+        <li>
+          <view class="tool_system_ul_word">
+            <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+            <view class="tool_system_ul_time">2020-03-15</view>
+          </view>
+        </li>
+        <li>
+          <view class="tool_system_ul_word">
+            <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+            <view class="tool_system_ul_time">2020-03-15</view>
+          </view>
+        </li>
+      </ul>
+      <ul></ul>
+      <!-- <view class="tool_system_ul_word">
+        <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+        <view class="tool_system_ul_time">2020-03-15</view>
+      </view>
+      <view class="tool_system_ul_word">
+        <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+        <view class="tool_system_ul_time">2020-03-15</view>
+      </view>
+      <view class="tool_system_ul_word">
+        <view class="tool_system_ul_wen">消息1消息1消息1消息1消息1消息1消息1消息1消息1</view>
+        <view class="tool_system_ul_time">2020-03-15</view>
+      </view> -->
+
+    </view>
+  </view>
+  <!-- //每日推荐 -->
+  <view class="tool_promote">
+    <view class="index-statistics-header index-flex index-center" style="width:calc(100% - 60rpx);">
+      <image class="index-statistics-header-image" mode="scaleToFill" src="./../../image/promote.png"></image>
+      <view>每日推荐</view>
+    </view>
+  </view>
+  <view>
+    <view class="tool_promote_line">
+      <view class="tool_promote_line_left">
+      </view>
+      <view class="tool_promote_line_right">
+        <view class="tool_promote_title">商品名称商品名称商品名称商品名称 商品名称商品名称商品名称</view>
+        <view class="tool_promote_price">
+          <text class="tool_promote_fu">￥</text>149.00
+        </view>
+      </view>
+    </view>
+    <view class="tool_promote_line">
+      <view class="tool_promote_line_left">
+      </view>
+      <view class="tool_promote_line_right">
+        <view class="tool_promote_title">商品名称商品名称商品名称商品名称 商品名称商品名称商品名称</view>
+        <view class="tool_promote_price">
+          <text class="tool_promote_fu">￥</text>149.00
+        </view>
+      </view>
+    </view>
+    <view class="tool_promote_line">
+      <view class="tool_promote_line_left">
+      </view>
+      <view class="tool_promote_line_right">
+        <view class="tool_promote_title">商品名称商品名称商品名称商品名称 商品名称商品名称商品名称</view>
+        <view class="tool_promote_price">
+          <text class="tool_promote_fu">￥</text>149.00
+        </view>
+      </view>
+    </view>
+  </view>
+</view>
+<tabbar tabbar="{{tabbar}}"></tabbar>
