--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -53,31 +53,31 @@
 		</view>
 		<view class="index-news" wx:for="{{[1,2,3,4]}}" wx:key="*this">
 			<view class="index-news-top index-center index-flex">
-				<view class="index-flex">
+				<view class="index-flex"  bindtap="jumpDetails">
 					<view class="index-news-icon"></view>
 					<view style="width:calc(100% - 100rpx);">
 						<view class="index-news-h1">广胜机电13800001111</view>
 						<view class="index-news-h2">1分钟前</view>
 					</view>
 				</view>
-				<image mode="scaleToFill" class="index-news-image" src="./../../image/dial.png"></image>
+				<image bindtap="jumpPhone" data-index="{{index}}" mode="scaleToFill" class="index-news-image" src="./../../image/dial.png"></image>
 			</view>
-			<view class="index-news-h3">
+			<view class="index-news-h3"  bindtap="jumpDetails">
 				机翼型叶轮，防爆风机，最大30号，最小2号，角度可以调整，风量风压随时改变，手机微信同步：13800001111
 			</view>
 			<view class="index-news-content index-center index-flex">
-				<image mode="scaleToFill" src="./../../image/add.png"></image>
-				<image mode="scaleToFill" class="index-news-left" src="./../../image/add.png"></image>
-				<image mode="scaleToFill" class="index-news-left" src="./../../image/add.png"></image>
+				<image bindtap="previewImage" data-index="./../../image/caigou-bk.png" mode="scaleToFill" src="./../../image/caigou-bk.png"></image>
+				<image mode="scaleToFill" bindtap="previewImage" data-index="./../../image/caigou-bk.png" class="index-news-left" src="./../../image/caigou-bk.png"></image>
+				<image mode="scaleToFill" bindtap="previewImage" data-index="./../../image/caigou-bk.png" class="index-news-left" src="./../../image/caigou-bk.png"></image>
 			</view>
 			<view class="index-news-footer  index-flex">
 				<view class="index-news-h4">浏览次数1115次</view>
 				<view class="index-flex index-center">
-					<view class="index-flex index-center">
+					<view class="index-flex index-center" bindtap="jumpFabulous" data-index="{{index}}">
 						<image mode="scaleToFill" src="./../../image/Fabulous.png"></image>
 						<view class="index-news-h4">21</view>
 					</view>
-					<view class="index-flex index-center">
+					<view class="index-flex index-center"  bindtap="jumpForwarde" data-index="{{index}}">
 						<image mode="scaleToFill" src="./../../image/Forward.png"></image>
 						<view class="index-news-h4">21</view>
 					</view>
