--- a/pages/purchase/purchase.wxss
+++ b/pages/purchase/purchase.wxss
@@ -1,244 +1,114 @@
-/**index.wxss**/
-.container {
-  height: 100%;
-  width: 100%;
-  color: #333333;
+page {
+  background: #F8F6F9;
+  padding-bottom: 150rpx;
 }
 
-.index-news-content,
-.index-list,
-.index-statistics-header,
-.index-news-h3,
-.index-news-footer {
-  margin: 0 30rpx;
-}
-
-.swiper,
-.swiper image {
-  height: 368rpx;
-  width: 100%;
-}
-
-.index-flex {
-  display: flex;
-
-}
-
-.index-center {
-  align-items: center;
-}
-
-.index-list {
-  width: calc(100% - 60rpx);
-  flex-wrap: wrap;
-}
-
-.index-list-view {
-  width: 33%;
-}
-
-.index-list-icon {
-  width: 92rpx;
-  height: 92rpx;
-  background: #0060FF;
-  border-radius: 92rpx;
-  margin-left: calc(50% - 46rpx);
-  margin-bottom: 18rpx;
-  justify-content: center;
-}
-
-.index-list image {
-  width: 45rpx;
-  height: 47rpx;
-}
-
-.index-list-text {
-  font-size: 27rpx;
-  color: #333333;
-  text-align: center;
-  width: 100%;
-  margin-bottom: 18rpx;
-}
-
-
-.index-statistics-header {
-  padding: 20rpx 0;
-  border-bottom: #DCDCDC solid 1px;
-}
-
-.index-statistics-header image {
-  height: 36rpx;
-  width: 36rpx;
-  margin-right: 13rpx;
-}
-
-.index-statistics-header view {
-  font-size: 30rpx;
-
-}
-
-.index-statistics-bottom {}
-
-.index-statistics-view {
-  width: 50%;
-  text-align: center;
-  margin: 20rpx 0 20rpx 0;
-}
-
-.index-statistics-h1 {
-  font-size: 36rpx;
-  color: #FFB823;
-}
-
-.index-statistics-h2 {
-  font-size: 20rpx;
-  color: #999999;
-}
-
-.index-statistics-h3 {
-  font-size: 36rpx;
-  color: #42B777;
-}
-
-.index-statistics-border {
-  border-right: 1px solid #DCDCDC;
-  box-sizing: border-box;
-}
-
-.index-bk {
-  height: 20rpx;
-  width: 100%;
-  background: #DCDCDC;
-}
-
-.index-news-top {
-  margin: 28rpx 30rpx;
-  justify-content: space-between;
-}
-
-.index-news-icon {
-  height: 90rpx;
-  width: 90rpx;
-  border: 1px #DCDCDC solid;
+.details-bt {
+  width: 440rpx;
+  height: 88rpx;
+  margin-left: calc(50% - 220rpx);
+  margin-top: 30rpx;
+  margin-bottom: 30rpx;
+  background: white;
   border-radius: 90rpx;
 }
 
-.index-news-image {
-  width: 180rpx;
-  height: 60rpx;
+.details-bt-view {
+  width: 50%;
+  height: 88rpx;
+  line-height: 88rpx;
+  font-size: 28rpx;
+  color: #028FFB;
+  text-align: center;
 }
 
-.index-news-h1 {
+.details-avtive {
   font-size: 30rpx;
-
+  color: #FFFFFF;
+  border-radius: 90rpx;
+  background: linear-gradient(to right, #68BAFF, #0060FF);
 }
 
-.index-news-h2 {
-  font-size: 24rpx;
-  color: #999999;
-  margin-top: 10rpx;
-}
-
-.index-news-h3 {
+.details-search-h1 {
   font-size: 30rpx;
+  color: #333333;
 }
 
-.index-news-content image {
-  height: 200rpx;
-  width: 200rpx;
-  border: 1px solid #DCDCDC;
-  border-radius: 5px;
+.details-search-h2 {
+  font-size: 30rpx;
+  color: #028FFB;
 }
 
-.index-news-left {
-  margin-left: 45rpx;
-  margin-top: 26rpx;
-  margin-bottom: 26rpx;
+.details-search-h3 {
+  font-size: 30rpx;
+  color: #028FFB;
+  width: 260rpx;
+  line-height: 60rpx;
 }
 
-.index-news-footer {
-  justify-content: space-between;
-  margin-top: 20rpx;
-  margin-bottom: 20rpx;
+.details-search-icon {
+  height: 26rpx;
+  width: 24.5rpx;
+  margin: 17rpx 14rpx;
 }
 
-.index-news-h4 {
-  font-size: 24rpx;
-  color: #999999;
+.details-search-image {
+  height: 45rpx;
+  width: 89.8rpx;
+  margin: 7rpx 0;
+
 }
 
-.index-news-footer image {
-  height: 32rpx;
-  width: 32rpx;
-  margin: 0 13rpx 0 49rpx;
-}
-
-.index-search {
-  height: 80rpx;
-  width: calc(100% - 60rpx);
+.details-search-border {
+  width: 409rpx;
   border: 1px solid #BBBBBB;
   border-radius: 10px;
-  display: flex;
-  align-items: center;
-  margin: 0 30rpx;
 }
 
-.index-search input {
-  height: 80rpx;
-  width: calc(100% - 162rpx);
-  line-height: 80rpx;
-  padding: 0 22rpx;
-  box-sizing: border-box;
-  
-}
-
-.index-search-right {
-  width: 120rpx;
-  height: 60rpx;
-  margin-right: 10rpx;
-}
-
-.index-search-left {
-  width: 32rpx;
-  height: 34rpx;
-  margin: 0 0 0 20rpx;
-}
-
-.purchase-list {
-  flex-wrap: wrap;
-  background: #F7F7F7;
-  padding: 30rpx;
-}
-
-.purchase-list-view {
-  height: 290rpx;
-  width: calc(33% - 20rpx);
+.search-list {
+  width: calc(50% - 30rpx);
+  height: 340rpx;
   background: white;
-  margin-bottom: 20rpx;
-  border-radius: 10px;
+  border-radius: 22.5px;
+  margin-top: 80rpx;
 }
 
-.purchase-list-right {
-  margin-right: 30rpx
+.search-list-right {
+  margin-left: 30rpx;
 }
 
-.purchase-list-view image {
-  height: 196rpx;
-  width: 100%;
+.search-list-icon {
+  margin-top: -60rpx;
+  margin-bottom: 27rpx;
+  height: 120rpx;
+  width: 120rpx;
+  margin-left: calc(50% - 60rpx);
+  border-radius: 50%;
+  border: 1px solid #DCDCDC;
 }
 
-.purchase-list-h2 {
-  font-size: 24rpx;
+.search-list-h1 {
   color: #333333;
-  padding:0 15rpx;
+  font-size: 28rpx;
 }
 
-.purchase-list-h3 {
-  font-size: 24rpx;
-  color: #FF4343;
-  padding:0 15rpx;
+.search-list-h2 {
+  padding: 20rpx 26rpx;
+  margin-top: 15rpx;
+  background: #028FFB;
+  color: white;
+  font-size: 28rpx;
+  border-radius: 26px;
 }
-.container{
-  padding-bottom: 144rpx;
-  background: #F7F7F7;
+.purchase-list{
+  padding: 50rpx 30rpx;
+  width: calc(100% - 60rpx);
+  box-sizing: border-box;
+  min-height: 240rpx;
+  background: white;
+  margin:0 30rpx;
+  font-size: 30rpx;
+  margin-bottom: 20rpx;
+  line-height: 46rpx;
+  border-radius: 22.5px;
 }
