--- a/pages/productLine/productLine.wxml
+++ b/pages/productLine/productLine.wxml
@@ -3,13 +3,13 @@
 <view class="index-flex">
 	<view class="sideBar-list">
 	<view class="sideBar-list-abslotue">
-		<view wx:for="{{sideBarList}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
+		<view wx:for="{{sideBarList[sideI].list}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
 			{{item.name}}
 		</view>
 		</view>
 	</view>
 		<view style="height: 100%;">
-			<view class="sideBar-content" wx:for="{{sideBarList}}" wx:key="*this" data-item="{{item}}"  bindtap="jump">
+			<view class="sideBar-content" wx:for="{{sideBarList[sideI].list}}" wx:key="*this" data-item="{{item}}"  bindtap="jump">
 				<view class="sideBar-h1">主机事业部</view>
 				<view class="sideBar-h2">这是主机事业部1简介这是主机事业部 1简介这是主机事业部1简介</view>
 				<view class="index-flex index-center">
