--- a/pages/release/release.wxss
+++ b/pages/release/release.wxss
@@ -1,1 +1,76 @@
 /* pages/release/release.wxss */
+.release{
+  background: #F7F6F9;
+  padding: 30rpx;
+  height: 100%;
+}
+.release-radius{
+  border-radius: 5px;
+}
+.release-title{
+  width: 100%;
+  height: 80rpx;
+  line-height: 80rpx;
+  font-size: 32rpx;
+  margin-bottom: 10rpx;
+  padding:0 30rpx;
+  box-sizing: border-box;
+}
+.release-textarea{
+  width: 100%;
+  height: 324rpx;
+  padding:30rpx 30rpx;
+  box-sizing: border-box;
+  font-size: 32rpx;
+
+}
+.release-image{
+  padding: 30rpx;
+  display: flex;
+  border-top: 1px #DCDCDC solid;
+  border-radius: 0 0 5px 5px;
+margin-bottom: 20rpx;
+}
+.release-image image{
+  width: 43rpx;
+  height: 35rpx;
+  margin-right: 43rpx;
+}
+.release-list-h1{
+width: 166rpx;
+padding: 30rpx 0 30rpx 30rpx ;
+font-size: 30rpx ;
+color: #333333;
+}
+.release-list-input{
+max-width:70%;
+height: 90rpx;
+line-height: 90rpx;
+font-size: 30rpx ;
+padding: 0;
+}
+.release-list-border{
+  border-top: 1px #DCDCDC solid;
+}
+.release-radius-top{
+  border-radius: 5px 5px 0 0;
+}
+.release-radius-bottom{
+  border-radius:0 0 5px 5px ;
+}
+.release-bt{
+  width: 580rpx;
+  height: 100rpx;
+  text-align: center;
+  line-height: 100rpx;
+  background: #028FFB;
+  color: white;
+  font-size: 34rpx;
+  border-radius: 25px;
+  margin-left: calc(50% - 290rpx);
+  margin-top: 110rpx;
+}
+page{
+  background: #F7F6F9;
+
+}
