--- a/pages/tendering/tendering.wxss
+++ b/pages/tendering/tendering.wxss
@@ -13,3 +13,13 @@ font-size: 24rpx;
 .tendering-title-view{
   max-width: 440rpx;
 }
+.index-statistics-header-images {
+  height: 32rpx;
+  width: 32rpx;
+  margin-right: 13rpx;
+}
+.index-statistics-header-images {
+  height: 32rpx;
+  width: 34rpx;
+  margin-right: 13rpx;
+}
