--- a/pages/legaladvice/legaladvice.wxml
+++ b/pages/legaladvice/legaladvice.wxml
@@ -1,25 +1,12 @@
-<view class="index-bk"></view>
-<view class="index-center index-flex index-margin" style="padding:30rpx 0 ;">
-	<view class="index-news-icon"></view>
-	<view style="">
-		<view class="legaladvice-h1">AVC律师事务所</view>
-		<view class=" legaladvice-h2">联系电话：18911110000</view>
-	</view>
-</view>
-
-<view class="tabr index-flex index-flex-between index-center">
-		<view class="index-flex index-center">
-			<view class="tar-list" bindtap="jump">
-				<image src="../../image/home-index.png"></image>
-				<view class="tar-h1">首页</view>
-			</view>
-			<view class="tar-list" bindtap="start">
-				<image src="../../image/start.png"></image>
-				<view class="tar-h1">收藏</view>
+	<!-- 轮播 -->
+	<view style="background: #F8F6F9;height:100%;">
+		<swipers swiperData="{{swiperData}}"></swipers>
+		<view class=" install">
+			<view class="install-list"  wx:for="{{swiperData.list}}" wx:key="*this"  bindtap="jump" data-index="{{index}}">
+				<view class="install-h1">法律公司一 联系电话：13811110000</view>
+				<view class="install-h1">文字介绍：************** </view>
+				<view class="install-h1">工作时间：8:00 - 17:0</view>
+      <image class="install-image" src="../../image/back-right.png"></image>
 			</view>
 		</view>
-    <view class="tar-h4">￥668.00</view>
-		<image class="tar-bottom-image" src="../../image/Immediatepurchase.png"></image>
 	</view>
-	<!-- <image style="width:100%;" mode="widthFix" src="../../image/sss.png"></image> -->
-	<view style="width:100%;height:700px;background:white"></view>
