--- a/pages/myorder/myorder.wxml
+++ b/pages/myorder/myorder.wxml
@@ -1,11 +1,38 @@
-
-
-
-
-
-
- <!-- <picker mode="region" bindchange="bindRegionChange" value="{{region}}" custom-item="{{customItem}}">
-    <view class="picker">
-      当前选择：{{region[0]}}，{{region[1]}}，{{region[2]}}
+<!-- 选项 -->
+<view class="myorder-header index-flex index-center">
+	<view class="myorder-header-h1" data-index="0" bindtap="jumpHead">
+		<view class="{{headI==0?'myorder-header-active':''}} myorder-header-h2">全部</view>
+	</view>
+	<view class="myorder-header-h1" data-index="1" bindtap="jumpHead">
+		<view class="{{headI==1?'myorder-header-active':''}} myorder-header-h2">待支付</view>
+	</view>
+	<view class="myorder-header-h1" data-index="2" bindtap="jumpHead">
+		<view class="{{headI==2?'myorder-header-active':''}} myorder-header-h2">已支付</view>
+	</view>
+	<view class="myorder-header-h1" data-index="3" bindtap="jumpHead">
+		<view class="{{headI==3?'myorder-header-active':''}} myorder-header-h2">已取消</view>
+	</view>
+</view>
+<view class="myorder-content" wx:for="{{[0,1,2,3,4,5,6]}}" wx:key="*this">
+	<!-- 订单号 -->
+	<view class="index-flex index-center index-flex-between myorder-content-head">
+		<view class="myorder-content-h1">订单号：14526867369864</view>
+		<view class="myorder-content--h2">等待付款</view>
+	</view>
+	<view class="index-flex index-center index-flex-between">
+		<image class="myorder-content-icon"></image>
+		<view class=" index-center-right">
+			<view>空调变KFR-26GW大1匹变频品圆冷暖 壁挂式空调 手机 </view>
+			<view class="index-flex index-center index-flex-between">
+				<view class="myorder-content-h3">银色，智能操作</view>
+				<view class="myorder-content-h4">×1</view>
+			</view>
+		</view>
+	</view>
+   <view class="myorder-content-h5">共1件商品 合计：¥8999.00(含运费0.00)
     </view>
-  </picker> -->
+  <view  class="myorder-content-h6 myorder-content-h7">立即付款</view>
+  <view  class="myorder-content-h6">取消订单</view>
+
+
+</view>
