--- a/pages/activity/index.wxml
+++ b/pages/activity/index.wxml
@@ -26,6 +26,9 @@
 			</view>
 		</view>
 	</view>
+<floatingwindow winData="winData"></floatingwindow>
+
+	<tarbbb tarData="{{tarData}}"></tarbbb>
 	<!-- <view class="tabr index-flex index-flex-between index-center">
 		<view class="index-flex index-center">
 			<view class="tar-list" bindtap="jump">
