--- a/pages/businessUnit/businessUnit.wxml
+++ b/pages/businessUnit/businessUnit.wxml
@@ -3,7 +3,8 @@
 				<swipers swiperData="{{swiperData}}"></swipers>
 		<view class=" install">
 			<view class="install-list">
-				<view class="install-h1">联系人：张健  联系电话：0534-5019999</view>
+				<view class="install-h1">联系人：张健</view>
+				<view class="install-h1">联系电话：0534-5019999</view>
 				<view class="install-h1">工作时间：8:00 - 17:00 </view>
 			</view>
 			<view class="install-list">
@@ -38,6 +39,11 @@
 				<image src="../../image/start.png"></image>
 				<view class="tar-h1">收藏</view>
 			</view>
+			<view class="tar-list" bindtap="zhuanfa">
+				<image src="../../image/zhuanfa.png"></image>
+				<view class="tar-h1">分享</view>
+			</view>
 		</view>
-		<image class="tar-bottom-image" src="../../image/Onlineconsultation.png"></image>
+		<image class="tar-bottom-image" mode="widthFix" src="../../image/dial.png"></image>
 	</view>
+<floatingwindow winData="winData"></floatingwindow>
