--- a/pages/install/details.wxml
+++ b/pages/install/details.wxml
@@ -1,6 +1,6 @@
 	<!-- 轮播 -->
 	<view style="background: #F8F6F9;height:100%;padding-bottom:100rpx;">
-			<swipers swiperData="{{swiperData}}"></swipers>
+		<swipers swiperData="{{swiperData}}"></swipers>
 		<view class=" install">
 			<view class="install-list">
 				<view class="install-h1">联系电话：13811110000 </view>
@@ -25,6 +25,9 @@
 
 			</view>
 		</view>
+<floatingwindow winData="winData"></floatingwindow>
+
+		<tabbar tarData="{{tarData}}"></tabbar>
 	</view>
 	<!-- <view class="tabr index-flex index-flex-between index-center">
 		<view class="index-flex index-center">
