--- a/pages/productLine/productLine.wxml
+++ b/pages/productLine/productLine.wxml
@@ -2,26 +2,30 @@
 <!-- 侧导航 -->
 <view class="">
 	<view class="sideBar-list">
-	<view class="sideBar-list-abslotue">
-		<view wx:for="{{sideBarList[sideI].list}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
-			{{item.name}}
-		</view>
+		<view class="sideBar-list-abslotue">
+			<view wx:for="{{sideBarList[sideI].list}}" class="sideBar-list {{sideBarI==index?'sideBar-active':''}}" data-index="{{index}}" wx:key="*this" bindtap="sideBar">
+				{{item.name}}
+			</view>
 		</view>
 	</view>
-		<view style="height: 100%;margin-top:-100rpx">
-			<view class="sideBar-content" wx:for="{{list}}" wx:key="*this" data-item="{{sideBarList[sideI].list[sideBarI].name}}"  bindtap="jump">
+	<view style="height: 100%;margin-top:-100rpx">
+		<view class="sideBar-content" wx:for="{{list}}" wx:key="*this" data-item="{{sideBarList[sideI].list[sideBarI].name}}" bindtap="jump">
+			<view class="sideBar-content-conter index-flex">
+				<image class="sideBar-content-icon" src="../../image/user-icon.png"></image>
 				<view class="sideBar-h1">主机事业部{{sideBarList[sideI].list[sideBarI].name}}</view>
-				<view class="sideBar-h2">主机事业部部产品涵盖空调主机全系列产品，拥有第三方认证的超低温实验室。</view>
-				<view class="index-flex index-center">
-				<image src="{{item.url}}" class="sideBar-view sideBar-view-right" ></image>
-				<image src="{{item.url}}" class="sideBar-view sideBar-view-right" ></image>
-				<image src="{{item.url}}" class="sideBar-view sideBar-view-right" ></image>
-				<image src="{{item.url}}" class="sideBar-view sideBar-view-right" ></image>
-					<!-- <view class="sideBar-view sideBar-view-right"></view>
+			</view>
+			<view class="sideBar-h2">主机事业部部产品涵盖空调主机全系列产品，拥有第三方认证的超低温实验室。</view>
+			<view class="index-flex index-center">
+				<image src="{{item.url}}" class="sideBar-view sideBar-view-right"></image>
+				<image src="{{item.url}}" class="sideBar-view sideBar-view-right"></image>
+				<image src="{{item.url}}" class="sideBar-view sideBar-view-right"></image>
+				<image src="{{item.url}}" class="sideBar-view sideBar-view-right"></image>
+				<!-- <view class="sideBar-view sideBar-view-right"></view>
 					<view class="sideBar-view sideBar-view-right"></view>
 					<view class="sideBar-view sideBar-view-right"></view>
 					<view class="sideBar-view"></view> -->
-				</view>
 			</view>
 		</view>
+	</view>
 </view>
+<floatingwindow winData="winData"></floatingwindow>
